--- a/package.json
+++ b/package.json
@@ -8,9 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.3",
+    "formik": "^2.4.9",
+    "jose": "^6.1.3",
+    "mongoose": "^9.0.2",
+    "next": "15.5.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.5.0"
+    "react-hot-toast": "^2.6.0",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
